# simple_rag_cli

./: .dockerignore  .gitignore  AI_CONTEXT.md  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  secrets.toml.example
.github/workflows/: ci.yml
src/config/: config_loader.py  constants.py  paths.py
src/database/: database_management.py  registry.py
src/database/connections/: base.py  mysql.py  oracle.py  postgres.py  snowflake.py
src/llm/: ai_management.py  system_prompt.py
src/llm/providers/: anthropic.py  base.py  gemini.py  local_llm.py  ollama.py
src/security/: key_management.py  simple_user_resolver.py
src/services/: audit_logger.py  feedback_manager.py  question_analyzer.py  ui.py
src/training/: base.py  mysql.py  oracle.py  postgres.py  snowflake.py  trainer.py
src/ui/: formatter.py  json_serializer.py
tests/core/: test_app.py  test_app_extended.py  test_config.py  test_user_resolver.py
tests/database/: test_database_management.py  test_mysql_connection.py  test_oracle_connection.py  test_postgres_connection.py  test_snowflake_connection.py
tests/integration/: test_cli_interactive.py
tests/llm/: test_ai_management.py  test_llm_models.py  test_system_prompt.py
tests/services/: test_question_analyzer.py  test_question_analyzer_robustness.py
tests/training/: test_mysql_trainer.py  test_training.py  test_training_demo.py  test_training_extended.py
tests/ui/: test_formatter.py  test_json_serializer.py  test_notification.py
