[project]
name = "simple-rag-cli"
version = "0.1.0"
description = "Interactive RAG CLI for Snowflake powered by Vanna AI"
requires-python = ">=3.10"
dependencies = [
    "vanna>=2.0.2",
    "openai>=1.0.0",
    "snowflake-connector-python>=3.0",
    "chromadb>=1.0",
    "cryptography>=40.0",
    "tomlkit>=0.12",
    "rich>=13.0",
    "psycopg2-binary>=2.9",
    "oracledb>=1.0",
]

[project.optional-dependencies]
mysql = ["pymysql>=1.0.3"]
gemini = ["google-generativeai>=0.8.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
simple-rag = "app:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src", "app.py"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
