[project]
name = "simple-rag-cli"
version = "0.1.0"
description = "Interactive RAG CLI for Snowflake powered by Vanna AI"
requires-python = ">=3.10"
dependencies = [
    "vanna>=2.0.2,<3.0.0",
    "openai>=1.0.0,<2.0.0",
    "snowflake-connector-python>=3.0,<4.0.0",
    "chromadb>=1.0,<2.0.0",
    "cryptography>=40.0,<46.0.0",
    "tomlkit>=0.12,<1.0.0",
    "rich>=13.0,<15.0.0",
    "psycopg2-binary>=2.9,<3.0.0",
    "oracledb>=1.0,<3.0.0",
]

[project.optional-dependencies]
mysql = ["pymysql>=1.0.3,<2.0.0"]
gemini = ["google-generativeai>=0.8.0,<1.0.0"]
dev = [
    "pytest>=7.0,<9.0.0",
    "pytest-cov>=4.0,<7.0.0",
    "ruff>=0.4,<1.0.0",
    "pytest-asyncio>=0.21.0,<2.0.0",
]

[project.scripts]
simple-rag = "app:main_sync"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src", "app.py"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
